Mon May  4 14:04:40 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/IntFileReaderByDirectBuffer.java: Fix
	infinite loop in copyFileIntoBuffer() when reading empty files.

Mon Apr 27 15:28:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Triangle.java: New methods in
	Triangle.List class: size(), isEmpty().
	Let Triangle.List.iterator.remove() method remove triangle from
	this list.
	* src/org/jcae/mesh/amibe/algos2d/ConstraintNormal3D.java: After
	the first pass, only edges near swapped edges have to be checked.
	Speed up is noticeable with large meshes if several passes are
	needed.

Fri Apr 24 17:14:30 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Location.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java: New Location interface,
	which is implemented by Vertex.
	* src/org/jcae/mesh/amibe/util/KdTree.java: KdTree was meant as a
	generic locator to find near vertices in a quadtree or an octree.
	With this new Location interface, it does no more have to depend
	on org.jcae.mesh.amibe.ds package.  It uses generics to let
	getNearVertex() and getNearestVertex() return an instance of the
	expected class without casting.

	* src/org/jcae/mesh/amibe/{util,metrics,patch}: Major redesign of
	these packages to group classes by their semantic.
	  + metrics: contains everything related to compute distances
	    between vertices and to find neighbours.  This package does
	    not depend on any other jCAE component.
	  + patch: contains derived classes of ds and metrics to deal
	    with CAD patches.
	  + util: contains classes which have not yet been sorted out.
	The handling of metrics has been fully reworked.  A new
	org.jcae.mesh.amibe.metrics.Metric interface is provided to
	compute distances between vertices, and metrics.EuclidianMetric3D
	is an implementation in 3D Euclidian space.
	
	org.jcae.mesh.amibe.patch.Metric2D is an extended interface for